@@ -21,6 +21,7 @@ brackets and parens.
 +Autocomp and calltip shortcuts are now customizable.
 +Add Bookmark manager window to Shelf
 +Support storing/loading user configuration from XDG standard location on Linux.
++Persist find settings between sessions.
 
 LIBRARY:
 +Support ControlBars in on left and right side of ControlBox.
